@@ -225,17 +225,17 @@
     },
     {
         "name": "ayecode/wp-super-duper",
-        "version": "1.0.5",
-        "version_normalized": "1.0.5.0",
+        "version": "1.0.6",
+        "version_normalized": "1.0.6.0",
         "source": {
             "type": "git",
             "url": "https://github.com/AyeCode/wp-super-duper.git",
-            "reference": "6782194925fb160536c72c9799ccdd2df6d5e7db"
+            "reference": "9e156bb1446e518291139d0f8a628eb65b1dcb5f"
         },
         "dist": {
             "type": "zip",
-            "url": "https://api.github.com/repos/AyeCode/wp-super-duper/zipball/6782194925fb160536c72c9799ccdd2df6d5e7db",
-            "reference": "6782194925fb160536c72c9799ccdd2df6d5e7db",
+            "url": "https://api.github.com/repos/AyeCode/wp-super-duper/zipball/9e156bb1446e518291139d0f8a628eb65b1dcb5f",
+            "reference": "9e156bb1446e518291139d0f8a628eb65b1dcb5f",
             "shasum": ""
         },
         "require": {
@@ -247,7 +247,7 @@
             "squizlabs/php_codesniffer": "^3.2",
             "wp-coding-standards/wpcs": "*"
         },
-        "time": "2018-12-15 11:53:58",
+        "time": "2019-01-11 12:03:56",
         "type": "library",
         "installation-source": "dist",
         "autoload": {
